BoT-7: Avoided unnecessary scroll on homepage from too much height in the main content

--- a/bag-of-trigs-ui/src/templates/Page/_styles.scss
+++ b/bag-of-trigs-ui/src/templates/Page/_styles.scss
@@ -1,12 +1,14 @@
 @import 'src/site-variables.scss';
 
 .page-content {
-  height: 100vh;
+  height: 100%;
 }
 
 .page-wrap {
   height: 100vh;
   overflow: auto;
+  display: flex;
+  flex-direction: column;
 
   &:before {
     content: "";
